# serving-ml-app

./: .containerignore  .dockerignore  .gitignore  README(ver original).md  README.md  READMEcmr.md  pyproject.toml
.github/: stale.yml
.github/workflows/: build-and-deploy.yml  build-image.yml  deploy-ecr.yml  deploy-ecs.yml
container/: Containerfile
data/: renegociaciones.csv
models/: cliente-renegociador-scaler.pkl  cliente-renegociador.pkl
notebooks/: BA_Clase08_11_arbolededecision_ej2.ipynb  analisis-de-clientes-bancarios.ipynb  sentiment-analysis-transformers.ipynb  sentiment-analysis.ipynb
project/: README.md  pyproject.toml
src/: __init__.py  base.py  main.py  model.py  utils.py
