[tool.poetry]
name = "serving-ml-model"
version = "0.1.0"
description = ""
authors = ["Edwin <ecaminero@>"]
readme = "README.md"
packages = [{ include = "src" }]

[tool.poetry.dependencies]
python = "^3.11"
python-dotenv = "^1.0.1"
fastapi = {extras = ["standard"], version = "^0.115.12"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.requires-plugins]
poetry-plugin-export = "^1.9.0"

[tool.coverage.run]
branch = true
omit = ["**/__init__.py",]
source = ["src"]