[tool.poetry]
name = "serving-ml-model"
version = "0.0.13"
description = ""
authors = ["Edwin <ecaminero@>"]
readme = "README.md"
packages = [{ include = "src" }]

[tool.poetry.dependencies]
python = "^3.11"
python-dotenv = "^1.0.1"
fastapi = {extras = ["standard"], version = "^0.115.12"}
uvicorn = "^0.34.0"
tomli = "^2.2.1"

[poetry.group.dev.dependencies]
pytest = "^5.2"
autopep8 = "^1.5.7"
toml = "^0.10.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.coverage.run]
branch = true
omit = ["**/__init__.py",]
source = ["src"]